content/terraform-plugin-testing/v1.12.x/docs/plugin/testing/acceptance-tests/known-value-checks/int64.mdx
---
page_title: 'Plugin Development - Acceptance Testing: Known Values'
description: >-
    Int64 Value Checks for use with Plan and State Checks.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-19T09:28:23-04:00
last_modified: 2025-03-19T09:28:23-04:00
# END AUTO GENERATED METADATA
---

# Int64 Known Value Checks

The known value checks that are available for int64 values are:

* [Int64Exact](/terraform/plugin/testing/acceptance-tests/known-value-checks/int64#int64exact-check)
* [Int64Func](/terraform/plugin/testing/acceptance-tests/known-value-checks/int64#int64func-check)

## `Int64Exact` Check

The [Int64Exact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Int64Exact) check tests that a resource attribute, or output value has an exactly matching int64 value.

Example usage of [Int64Exact](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Int64Exact) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/plan-checks/resource) plan check.

```go
func TestExpectKnownValue_CheckPlan_Int64(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
        	    // Example resource containing a computed int64 attribute named "computed_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigPlanChecks: resource.ConfigPlanChecks{
					PreApply: []plancheck.PlanCheck{
						plancheck.ExpectKnownValue(
							"test_resource.one",
							tfjsonpath.New("computed_attribute"),
							knownvalue.Int64Exact(123),
						),
					},
				},
			},
		},
	})
}
```

## `Int64Func` Check

The [Int64Func](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Int64Func) check allows defining a custom function to validate whether the int64 value of a resource attribute or output satisfies specific conditions.

Example usage of [Int64Func](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/knownvalue#Int64Func) in an [ExpectKnownValue](/terraform/plugin/testing/acceptance-tests/state-checks/resource) state check.

```go
func TestExpectKnownValue_CheckState_Int64Func(t *testing.T) {
	t.Parallel()

	resource.Test(t, resource.TestCase{
		// Provider definition omitted.
		Steps: []resource.TestStep{
			{
				// Example resource containing an int64 attribute named "configurable_attribute"
				Config: `resource "test_resource" "one" {}`,
				ConfigStateChecks: []statecheck.StateCheck{
					statecheck.ExpectKnownValue(
						"test_resource.one",
						tfjsonpath.New("configurable_attribute"),
						knownvalue.Int64Func(func(v int64) error {
							if v > 1 && v < 12 {
								return fmt.Errorf("value must be between 1 and 12")
							}
							return nil
						}),
					),
				},
			},
		},
	})
}
```